tests/paczka1/fuzzy1/50244726.err
Error in line 2: xAWhWwXE1 A705 32,4
Error in line 1: KxmXeNyp A705 22,6
Error in line 12: d5R A705 13,60
Error in line 8: d5R A755 63,4
Error in line 15: 3sh S40 179,4
Error in line 27: dUTH A755 53,7
Error in line 28: dUTH A938 29,7
Error in line 16: d5R A705 43,7
Error in line 33: 3sh A705 77,4
